--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,21 @@ body {
 	overflow: hidden;
 	width: 150px;
 	height: 100%;
+	background-color: white;
 	background-color: rgba(255, 255, 255, 0.6);
 	box-shadow: 0px 0px 35px rgb(182, 182, 182);
+}
+
+.forBackground{
+	min-height: 700px;
+	overflow: hidden; 
+	z-index:-1;
 }
 
 .section {
 	/*background-color: #f2f2f2;*/
 	min-height: 700px;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	padding-left: 300px;
 	padding-top:10px;
 	padding-bottom: 10px;
@@ -43,74 +50,89 @@ body {
 	padding-left: 310px;
 	padding-top:60px;
 	padding-bottom: 20px;
-	padding-right: 20px;
+	padding-right: 183px;/*
 	background-image: url("../images/WorkNSocialSpaces/SpaceConception/Bckgrd.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
-	background-attachment: fixed;
+	background-attachment: fixed;*/
 	/*opacity: 0.5;*/
 
 }
 
 
-#HomeSection{
-	background-image: url("../images/LivingSpaces/CreightonAvenueHouseLondon/1.jpg");
-	background-repeat: no-repeat;
+/*#HomeSection{*/
+	/*position: relative;*/
+	/*background-image: url("../images/LivingSpaces/CreightonAvenueHouseLondon/1.jpg");*/
+/*	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
-
-}
- 
+*//*filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+src='../images/LivingSpaces/CreightonAvenueHouseLondon/1.jpg',
+sizingMethod='scale');*/
+  /*-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/HomeBG.png',sizingMethod='scale')";*/
+/*
+	min-height: 100%;
+	min-width: 1024px;
+	width: 100%;
+	height: auto;*/
+/*}*/
+/* 
 #AboutSection{
 	background-image: url("../images/LivingSpaces/BucklandHillMaidstoneUK/1.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
 
-}
+}*/
 
-#ServicesSection{
+/*#ServicesSection{
 	background-image: url("../images/LivingSpaces/TheVestryLondon/1.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
 
-}
+}*/
 
-#ProjectsSection{
+/*#ProjectsSection{
 	background-image: url("../images/WorkNSocialSpaces/SpaceConception/2.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
 
-}
-
+}*/
+/*
 #GetInTouchSection{
 	background-image: url("../images/Outdoors/CreightonAvenue/1.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: fixed;
 
-}
+}*/
 
 .Contents {
-	width: 700px;
-	top:200px;
+	/*width: 700px;*/
+	width: 80%;
+	top:100px;
 	/*left:300px;*/
 	/*position:absolute; */
 	position: relative;
 	margin: 0px;
 	/*opacity:0.2;*/
-	height: 200px;
-	/*color: #555555;*/
-	/*background-color:rgba(255,255,255,0.8);*/
-	background-color: rgba(0, 0, 0, 0.6);
+	/*height: 300px;*/
 	color: white;
+	background-color:#1f1f1f;
+	background-color:rgba(0,0,0,0.6);
+	/*background-color: rgba(255, 255, 255, 0.6);*/
+	/*color: #6b6b64;*/
 	border-radius: 4px;
-	/*font-size: 14pt;*/
+	font-size: 10pt;
 	overflow: hidden;
 	padding: 25px;
 }
+/*
+#ProjectsContents {
+	height: 500px;
+}*/
 
 #Projects{
 	/*background-image: url("../images/bkg-grid.png");*/
@@ -137,6 +159,15 @@ body {
 	min-height: 100%;
 	padding-top: 20px;
 	opacity: 1;
+}
+
+#ServicesList{
+		list-style: none;
+		font-size: 15px;
+}
+
+.ServicesListItem{
+		padding:7px;
 }
 
 #menu {
