--- a/css/style.css
+++ b/css/style.css
@@ -48,13 +48,17 @@ body {
 }
 
 .Contents {
-	width: 80%;
+	width: 65%;
 	top:100px;
 	position: relative;
 	margin: 0px;
-	color: white;
-	background-color:#2f2f2f;
-	background-color:rgba(0,0,0,0.6);
+	/*color: white;*/
+	/*background-color:#2f2f2f;*/
+	/*background-color:rgba(0,0,0,0.6);*/
+	/*color:#2f2f2f;*/
+	color:black;
+	background-color: white;
+	background-color: rgba(255, 255, 255, 0.6);
 	border-radius: 4px;
 	font-size: 10pt;
 	overflow: hidden;
@@ -87,16 +91,6 @@ body {
 	padding-top: 20px;
 	opacity: 1;
 }
-
-#ServicesList{
-		list-style: none;
-		font-size: 15px;
-}
-
-.ServicesListItem{
-		padding:7px;
-}
-
 #menu {
 	margin: 0px;
 	padding: 0px;
@@ -105,41 +99,43 @@ body {
 }
 
 .menu-item {
-	background-color: #f9f9f9;
+	/*background-color: #f9f9f9;*/
 	margin-bottom: 5px;
 	font-size: 14pt;
-	color: #6b6b64;
+        color:#403D3E;
+/*	color: #6b6b64;*/
 	padding: 8px;
 	opacity: 0.8;
 	
 }
 
 .menu-item:hover  {
-	background-color: #f9f9f9;
+	/*background-color: #f9f9f9;*/
 	color: #d91844;
 	margin-bottom: 5px;
 	font-size: 14pt;
-	font-weight: bold;
+/*	font-weight: bold;*/
 	padding: 8px;
-	border-left: 6px solid #d91844;
+/*	border-left: 6px solid #d91844;*/
 }
 
 .menu-item-selected  {
-	background-color: #f9f9f9;
+/*	background-color: #f9f9f9;*/
 	color: #d91844;
 	margin-bottom: 5px;
 	font-size: 14pt;
-	font-weight: bold;
+/*	font-weight: bold;*/
 	padding: 8px;
-	border-left: 6px solid #d91844;
+/*	border-left: 6px solid #d91844;*/
 }
 
 .submenu-list {
-	background-color: #fcfcfc;
+	/*background-color: #fcfcfc;*/
 	margin-top: 5px;
 	margin-bottom: 5px;
 	font-size: 10pt;
-	color:#6b6b64;
+        color:#403D3E;
+	/*color:#6b6b64;*/
 	padding: 5px;
 	list-style: none;
 	opacity: 0.8;
@@ -151,15 +147,15 @@ body {
 }
 
 .submenu-item:hover  {
-	font-size: 12pt;
-	font-weight: bold;
+	/*font-size: 12pt;
+	font-weight: bold;*/
 	padding-bottom: 5px;
 	color: #d91844;
 }
 
 .submenu-item-selected  {
-	font-size: 12pt;
-	font-weight: bold;
+	/*font-size: 12pt;
+	font-weight: bold;*/
 	padding-bottom: 5px;
 	color: #d91844;
 }
