--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Exoc350';
+  src: url('Exotic350BoldBT.ttf');
+}
+html, body{overflow:hidden;}
+
+body  { 
+	font-family: 'Exoc350', "arial", monospace;
+	text-align: justify;
+ }
+
 .fake-link {
 	text-decoration: none;
 	cursor: pointer;	
@@ -5,7 +16,7 @@
 
 body {
 	margin: 0;
-	font-family: "arial", monospace;
+	/*font-family: "arial", monospace;*/
 	font-size: 12pt;
 }
 
@@ -30,7 +41,7 @@ body {
 
 .section {
 	min-height: 700px;
-	padding-left: 300px;
+	padding-left: 200px;
 	padding-top:10px;
 	padding-bottom: 10px;
 	padding-right: 10px;
@@ -171,6 +182,7 @@ body {
 	opacity: 0.7;
 	overflow: hidden;
 	font-size: 8pt;
+	z-index:10;
 }
 
 .footer-component {
